Changed link for email

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <div class="social-icons">
   <a href="https://github.com/abbyfischler" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
   <a href="https://www.instagram.com/abby_fischler/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-  <a href="https://www.instagram.com/abby_fischler/" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+  <a href="mailto:abigail.fischler@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
 </div>
  </div>
 </div>
