Updated resume location and changed bio

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
  <h5>Student at Geffen Academy at UCLA</h5>
 <div class="line-break"></div>
 
- <p> I am a member of Girl Genius’s social media and partnership teams. I love all things technology. I know HTML, CSS, the basics of python and I am currently learning Java. I am interested in learning about AI/Machine Learning and App Development.</p>
- <p><a href = "https://drive.google.com/file/d/1Tuh6r5lkaDmUhZTbFUYkkbt_LaYT8Uyd/view?usp=sharing"> Resume here</a></p>
+ <p> I am a member of Girl Genius’s social media and partnership teams. I love all things technology. I know HTML, CSS, the basics of Python and I am currently learning Java. I am interested in learning about AI/Machine Learning and App Development. Please find my resume: https://bit.ly/afResume</p>
+ <!--<p><a href = "https://drive.google.com/file/d/1Tuh6r5lkaDmUhZTbFUYkkbt_LaYT8Uyd/view?usp=sharing"> Resume here</a></p>-->
 
  <div class="social-icons">
   <a href="https://github.com/abbyfischler" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
   &nbsp;
-  
+
   <a href="https://www.instagram.com/abby_fischler/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
   &nbsp;
   <a href="mailto:abigail.fischler@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
