Updated resume link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <h5>Student at Geffen Academy at UCLA</h5>
 <div class="line-break"></div>
 
- <p> I am a member of Girl Genius’s social media and partnership teams. I love all things technology. I know HTML, CSS, the basics of Python and I am currently learning Java. I am interested in learning about AI/Machine Learning and App Development. Please find my resume: <button src="https://www.canva.com/design/DAD-gF3K88o/share/preview?token=RGdEjMk-TDib8694samd-A&role=EDITOR&utm_content=DAD-gF3K88o&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">Test</button></p>
+ <p> I am a member of Girl Genius’s social media and partnership teams. I love all things technology. I know HTML, CSS, the basics of Python and I am currently learning Java. I am interested in learning about AI/Machine Learning and App Development. Please find my resume: <a href="https://www.canva.com/design/DAD-gF3K88o/0HXcds0i_0rHHDtJl4r_ig/view?utm_content=DAD-gF3K88o&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu">Here</a></p>
  <!--<p><a href = "https://drive.google.com/file/d/1Tuh6r5lkaDmUhZTbFUYkkbt_LaYT8Uyd/view?usp=sharing"> Resume here</a></p>-->
 
  <div class="social-icons">
