Update link to goflie
https://gofile.io/d/yF9VSr

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <h5>Student at Geffen Academy at UCLA</h5>
 <div class="line-break"></div>
 
- <p> I am a member of Girl Genius’s social media and partnership teams. I was a <a href="https://www.kodewithklossy.com/"> KWK</a> 2020 scholar. I love all things technology. I know HTML, CSS, JS, and Python and I am currently learning Java. I am interested in learning about AI/Machine Learning and App Development. Please find my resume: <a href="https://www.canva.com/design/DAD-gF3K88o/0HXcds0i_0rHHDtJl4r_ig/view?utm_content=DAD-gF3K88o&utm_campaign=designshare&utm_medium=link&utm_source=viewer">Here</a></p>
+ <p> I am a member of Girl Genius’s social media and partnership teams. I was a <a href="https://www.kodewithklossy.com/"> KWK</a> 2020 scholar. I love all things technology. I know HTML, CSS, JS, and Python and I am currently learning Java. I am interested in learning about AI/Machine Learning and App Development. Please find my resume: <a href="https://gofile.io/d/yF9VSr">Here</a></p>
  <!--<p><a href = "https://drive.google.com/file/d/1Tuh6r5lkaDmUhZTbFUYkkbt_LaYT8Uyd/view?usp=sharing"> Resume here</a></p>-->
 
  <div class="social-icons">
