--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="wrapper">
 
 <div class="prof-box">
+  <img src="img_avatar.jpeg" alt="Avatar">
  <h1>Abby Fischler</h1>
  <h5>Student at Geffen Academy at UCLA</h5>
 <div class="line-break"></div>
