--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <h5>Student at Geffen Academy at UCLA</h5>
 <div class="line-break"></div>
 
- <p> I am a member of Girl Genius’ partnership teams. I was a <a href="https://www.kodewithklossy.com/"> KWK</a> 2020 scholar. I <b> love </b> all things technology. I know HTML, CSS, JS, and Python and I am currently learning Java. I am <b>interested<b> in learning about AI/Machine Learning and App Development. I'm an <b> ambassador</b> for <a href="https://www.bitbybitnyc.org/">Bit by Bit</a> and <a href="https://www.generationshe.co/"> Generation She.</a> Please find my resume: <a href="https://gofile.io/d/yF9VSr">Here</a></p>
+ <p> I am a member of Girl Genius’ partnership teams. I was a <a href="https://www.kodewithklossy.com/"> KWK</a> 2020 scholar. I <b> love </b> all things technology. I know HTML, CSS, JS, and Python and I am currently learning Java. I am <b>interested<b> in learning about AI/Machine Learning and App Development. I'm an <b>ambassador</b> for <a href="https://www.bitbybitnyc.org/">Bit by Bit</a> and <a href="https://www.generationshe.co/"> Generation She.</a> Please find my resume: <a href="https://www.canva.com/design/DAD-gF3K88o/view">Here</a></p>
  <!--<p><a href = "https://drive.google.com/file/d/1Tuh6r5lkaDmUhZTbFUYkkbt_LaYT8Uyd/view?usp=sharing"> Resume here</a></p>-->
 
  <div class="social-icons">
