added buy me a coffee

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   &nbsp;
   <a href="mailto:abigail.fischler@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
 </div>
+<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="abbyfischler" data-color="#FFDD00" data-emoji="💗"  data-font="Arial" data-text="Buy me a drink" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
  </div>
 </div>
 
