Updated coffee link

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
   <a href="https://www.instagram.com/abby_fischler/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
   &nbsp;
   <a href="mailto:abigail.fischler@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+<a href="https://www.buymeacoffee.com/abbyfischler" target="_blank"><i class="fa-dollar-sign" aria-hidden="true"></i></a>
+  &nbsp;
 </div>
-<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="abbyfischler" data-color="#FFDD00" data-emoji="💗"  data-font="Arial" data-text="Buy me a drink" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+
+
  </div>
 </div>
 
