--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <a href="https://www.instagram.com/abby_fischler/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
   &nbsp;
   <a href="mailto:abigail.fischler@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
-<a href="https://www.buymeacoffee.com/abbyfischler" target="_blank"><i class="fa-dollar-sign" aria-hidden="true"></i></a>
+<a href="https://www.buymeacoffee.com/abbyfischler" target="_blank"><i class="fa fa-dollar-sign" aria-hidden="true"></i></a>
   &nbsp;
 </div>
 
