--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
   <a href="https://www.instagram.com/abby_fischler/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
   &nbsp;
   <a href="mailto:abigail.fischler@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
-<a href="https://www.buymeacoffee.com/abbyfischler" target="_blank"><i class="fa fa-dollar-sign" aria-hidden="true"></i></a>
-  &nbsp;
+
+  <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="abbyfischler" data-color="#FF5F5F" data-emoji="☕"  data-font="Poppins" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
 </div>
-
-
  </div>
 </div>
 
